--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,4 @@
 PORT=5000
-MONGO_URI=your_mongodb_connection_string
+MONGO_URI=mongodb://localhost:27017/mern_blog
+JWT_SECRET=your_jwt_secret_key
+NODE_ENV=development
